# grace

./: .env.example  .gitignore  Promcode-prompts.yaml  README.md  add_connector.sh  add_flow.md  add_pm.md  codegen.md  commands.json  connector_checklist.md  extract_source_urls_simple.sh  field_analysis.md  gRPC-Testing-Workflow.md  grpc_checker.py  grpc_executor.py  grpc_generator.py  integrate_connector.md  link_fetcher.md  pyproject.toml  requirements.txt  run_cypress_tests.sh  run_grpc_tests.py  setup.md  setup.py  setup.sh  techspec.md  test-connector.legacy.sh  test.json  test_sets.json  verify-setup.py
.claude/commands/: populate-feedback.md
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
connector_integration/template/: planner_steps.md  tech_spec.md
docs/: postman-to-cypress.md
grpc_configs/: current_config.json
grpc_requests/: refund.json  rsync.json  void.json
guides/: connector_integration_guide.md  feedback.md  utility_functions_reference.md  workflow_selection.md
guides/learnings/: learnings.md
guides/patterns/: README.md  flow_macro_guide.md  macro_patterns_reference.md  pattern_CreateAccessToken_flow.md  pattern_IncomingWebhook_flow.md  pattern_IncrementalAuthorization_flow.md  pattern_accept_dispute.md  pattern_authorize.md  pattern_capture.md  pattern_createorder.md  pattern_defend_dispute.md  pattern_dsync.md  pattern_mandate_revoke.md  pattern_payment_method_token.md  pattern_psync.md  pattern_refund.md  pattern_repeat_payment_flow.md  pattern_rsync.md  pattern_session_token.md  pattern_setup_mandate.md  pattern_submit_evidence.md  pattern_void.md
guides/quality/: CONTRIBUTING_FEEDBACK.md  README.md  quality_review_template.md
guides/types/: types.md
modules/CodeGenForUCSConnector/: .gitignore  .gracerules  .graceucs  README.md  add_connector.sh
modules/Codegen/: .gracerules  README.md  add_connector.sh
modules/CodegenLegacy/: README.md
modules/DeepResearchCLI/: .env.example  .gitignore  LICENSE  MANIFEST.in  NPM_LIBRARY_GUIDE.md  README.md  SEARXNG.md  __init__.py  __main__.py  cli.py  custom_instructions.txt  demo.md  example-usage.js  package-lock.json  package.json  pyproject.toml  requirements.txt  run_cli.py  searxng-config.yml  setup.js  setup.py  setup.sh  test-ai.js  tsconfig.cli.json  tsconfig.json  tsconfig.lib.json  webpack.config.js
modules/DeepResearchCLI/research_types/: __init__.py
modules/DeepResearchCLI/scripts/: README.md  start-searxng.sh  status-searxng.sh  stop-searxng.sh
modules/DeepResearchCLI/services/: __init__.py  ai_service.py  config_service.py  direct_research_service.py  result_output_service.py  search_service.py  storage_service.py  web_scraping_service.py
modules/DeepResearchCLI/src/: index.ts
modules/DeepResearchCLI/src/cli/: cli.ts  index.ts
modules/DeepResearchCLI/src/lib/: GraceConfig.ts  GraceResearcher.ts  MassConfig.ts  MassResearcher.ts  factory.ts  index.ts
modules/DeepResearchCLI/src/services/: AIBrowserService.ts  AIService.ts  ConfigService.ts  DeepResearchOrchestrator.ts  DirectResearchService.ts  IntelligentSearchCoordinator.ts  ResultOutputService.ts  SearchService.ts  StorageService.ts  WebScrapingService.ts
modules/DeepResearchCLI/src/types/: index.ts
modules/DeepResearchCLI/src/ui/: TerminalUI.ts
modules/DeepResearchCLI/src/utils/: DebugLogger.ts
modules/DeepResearchCLI/utils/: debug_logger.py
modules/TechSpecGenerator/: .env.example  .gitignore  .npmignore  INSTALL.md  README.md  mock_server_generator.py  package-lock.json  package.json  pyproject.toml  setup.sh
modules/TechSpecGenerator/src/: index.ts
modules/TechSpecGenerator/src/api_doc_processor/: __init__.py  cli.py  config.py  exceptions.py  firecrawl_client.py  llm_client.py  utils.py  workflow.py  workflow_state.py
modules/TechSpecGenerator/src/api_doc_processor/nodes/: __init__.py  crawling_node.py  llm_processing_node.py  mock_server_node.py  output_node.py  url_collection_node.py
modules/TechSpecGenerator/src/core/: state-graph.ts  workflow.ts
modules/TechSpecGenerator/src/nodes/: crawling-node.ts  index.ts  llm-processing-node.ts  mock-server-node.ts  output-node.ts  url-collection-node.ts
modules/TechSpecGenerator/src/types/: workflow-state.ts
modules/TechSpecGenerator/src/utils/: config.ts  console.ts  progress.ts  validation.ts
modules/TechSpecGenerator/tests/: __init__.py  test_config.py  test_utils.py
references/: README.md
rulesbook/codegen/: .gracerules  .gracerules_add_flow  .gracerules_add_payment_method  README.md  add_connector.sh  detect_bankredirect.sh  prompt_bankredirect.sh  validate_connector_cypress.sh
scripts/: grace_cli.py  grace_registry.py  register_commands.py
src/: cli.py  config.py  grace_test_workflow.py
src/ai/: ai_service.py  claude_code_service.py
src/grpc-tester/: .env.grpc  grpc_checker.py  grpc_executor.py  grpc_generator.py  run_grpc_tests.py  test_sets.json
src/research/: __init__.py  workflow.py
src/scripts/: searxng_setup.py
src/techspec/: __init__.py  workflow.py
src/types/: __init__.py  config.py
src/utils/: ai_utils.py  filemanager_tools.py  interrupt_handler.py  progress.py  simple_timeline.py
src/workflows/: __init__.py  base.py
template-generation/: connector.rs.template  connector_macros.rs.template  macro_templates.md  test.rs.template  transformers.rs.template
test-grpc/: .env.example  README.md  test-connector.sh  test-env-example.sh  test-grpc.sh
test-grpc/configs/: bambora.json  server.json
test-grpc/flows/: auth-capture.sh  auth-psync.sh  auth-refund-rsync.sh  auth-void.sh
test-grpc/lib/: config-loader.sh  grpc-client.sh  grpc-executor.sh  header-builder.sh  logger.sh  response-parser.sh  template-engine.sh  utils.sh  validator.sh
workflow/: 1_orchestrator.md  2.1_links.md  2.2_techspec.md  2.3_codegen.md  2.4_pr.md  2_connector.md
(+161 files in other folders)
