[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grace-research-cli"
version = "1.0.0"
description = "GRACE Deep Research CLI - Intelligent web research with AI analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "juspay/grace", email = "manideepk90@gmail.com"}
]
keywords = ["research", "cli", "ai", "web-scraping", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/juspay/grace"
Repository = "https://github.com/juspay/grace"

[project.scripts]
grace-research = "run_cli:main"

[tool.setuptools]
packages = ["research_types", "services", "utils"]
py-modules = ["run_cli", "cli", "__init__", "__main__"]
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
